# sensel-caldera-linux-lab

./: .env.example  .gitignore  Makefile  README.md  compose.ndr.cloud.yml  compose.ndr.yml  compose.yml  pyproject.toml
.cursor/: mcp.json.example
.cursor/rules/: sensel-caldera-lab.mdc
caldera/: Dockerfile  entrypoint.sh
caldera-plugin-sensel/: hook.py
caldera/conf/: local.yml.template
docs/: PHASE3-HEXSTRIKE.md
fixtures/: caldera-operation-report.chain-c.sample.json  caldera-operation-report.ndr.sample.json  caldera-operation-report.sample.json  suricata-alerts-ndr.ndjson  wazuh-alerts-chain-c.ndjson  wazuh-alerts-ndr.ndjson  wazuh-alerts-phase3-livewire.ndjson  wazuh-alerts.ndjson
ndr/: Dockerfile  README.md  entrypoint.sh  portal.env.example
ndr/suricata/: suricata.yaml
scripts/: bootstrap-ndr-cloud.sh  bootstrap-sandcat.sh  correlate.py  correlate_phase3.py  ensure-edge-sensor.sh  hexstrike-check.sh  print-sandcat-deploy-command.sh  setup-hexstrike-mcp.sh  setup-ndr-edge.sh  test-wazuh-rules.sh  trainingctl.py
scripts/kali/: hexstrike-server-setup.sh
target-linux/: Dockerfile  entrypoint.sh  supervisord.conf
target-linux/scripts/: auto-collect.py  exfil-sim.py  install-wazuh-agent.sh  lateral-plan.py  marker-writer.py  setup-ndr-routes.sh  staging-manifest.py
tests/: conftest.py  test_ability_allowlist.py  test_compose_ndr_cloud.py  test_correlation_output.py  test_scenario_schema.py  test_target_tenant_validation.py  test_wazuh_fixture_coverage.py
training/: TRAINING-GUIDE-2.0.md
training/scenarios/: SEN-APT29-LNX-01-safe-discovery.yaml  (+5 more)
(+43 files in other folders)
